# cpp_hf

./: .gitignore  CMakeLists.txt  Installation.md  LICENSE  Readme.md  THIRD_PARTY_NOTICES.md  __init__.py  build_fftw_macos_arm.sh  build_install.sh  cpp_hf.cpp  cpp_hf_fft.hpp  cpp_hf_mixing.hpp  cpp_hf_module.cpp  cpp_hf_utils.hpp  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: build-and-test.yml  ci-and-release.yml  release.yml  wheels.yml
CI/: smoke_test.py
ci/: linux_before_all.sh  macos_arm_fftw.sh
cpp/: cpp_hf_native.cpp
cpp/include/cpp_hf/: fft.hpp  fock.hpp  kernel.hpp  linalg.hpp  parallel.hpp  selfenergy.hpp  solver_dm.hpp  solver_hartree_newton.hpp  solver_rtr.hpp  solver_scf.hpp  superlattice.hpp  types.hpp  utils.hpp
cpp_hf/: __init__.py
examples/: _bilayer_common.py  contimod_example_meshgrid_offline.py  multilayer_graphene_density_scan.py  quartermetal_dos_comparison.py  quartermetal_fermi_surfaces.py  quartermetal_phase_difference.py  quartermetal_writeup.md
examples/deprecated/: quartermetal_4configs_bands.py  quartermetal_T_nk_scan.py  quartermetal_convergence_trace.py  quartermetal_eps2_ref_trace.py  quartermetal_inspect.py  quartermetal_nk_scan.py  quartermetal_qm_phase_scan.py
examples/multilayer_graphene/: _bilayer_common.py  multilayer_graphene_baseline_check.py  multilayer_graphene_density_scan.py  multilayer_graphene_density_scan_extended.py  multilayer_graphene_density_scan_hartree.py  multilayer_graphene_reference_scf_scan.py
examples/tetralayer_quartermetal/: _common.py  quartermetal_D_scan.py  quartermetal_dos_comparison.py  quartermetal_fermi_surfaces.py  quartermetal_grid_pm_c3.py  quartermetal_grid_svp_c3.py  quartermetal_nk_convergence.py  quartermetal_phase_difference.py  quartermetal_phase_portraits.py  quartermetal_phase_portraits_contimod.py  quartermetal_writeup.md
examples/tetralayer_quartermetal/deprecated/: README.md  quartermetal_4configs_bands.py  quartermetal_D_scan_sameU.py  quartermetal_T_nk_scan.py  quartermetal_convergence_trace.py  quartermetal_convergence_trace2.py  quartermetal_eps2_ref_trace.py  quartermetal_grid.py  quartermetal_hartree_validation.py  quartermetal_hartree_vs_fock.py  quartermetal_inspect.py  quartermetal_kmax_check.py  quartermetal_long_iter_check.py  quartermetal_n05_D08_compare.py  quartermetal_nk96_bands.py  quartermetal_nk_scan.py  quartermetal_qm_phase_scan.py  quartermetal_single_cell.py  quartermetal_trace_D10.py
examples/tetralayer_quartermetal/noninteracting/: band_dispersion.py  dos_grid.py  fermi_surface_topology.py  phase_portraits.py  stacking_diagram.py
include/cpp_hf/: fft_batched2d.hpp  fftw_batched2d.hpp  hartreefock.hpp  hf_kernel.hpp  hf_mdspan.hpp  mdspan_compat.hpp  mixers.hpp  platform.hpp  prof.hpp  utils.hpp  views.hpp
src/: hartreefock.cpp
src/cpp_hf/: __init__.py  _compat.py  continuation.py  deflation.py  fock.py  hartree_newton.py  linalg.py  problem.py  reference_scf.py  solver.py  superlattice.py  symmetry.py  utils.py
tests/: conftest.py  generate_bilayer_reference.py  test_bilayer_regression.py  test_continuation.py  test_deflation.py  test_embedded_reference_potential.py  test_linalg.py  test_main.py  test_package_import.py  test_solver.py  test_solver_rtr.py  test_superlattice.py  test_symmetry.py
