[build-system]
requires = [
    "scikit-build-core>=0.9",
    "pybind11>=2.11",
    "numpy",
    "setuptools_scm[toml]>=8",
]
build-backend = "scikit_build_core.build"

[project]
name = "cpp_hf"
dynamic = ["version"]
description = "Hartree-Fock solvers on 2D k-meshes — C++ reimplementation of jax_hf"
readme = "Readme.md"
requires-python = ">=3.10"
authors = [{ name = "Tobias Wolf", email = "public@wolft.xyz" }]
license = { file = "LICENSE" }
keywords = ["hartree-fock", "fftw", "eigen", "pybind11", "condensed-matter", "physics"]
dependencies = [
    "numpy",
    "scipy",
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/skilledwolf/cpp_hf"
Issues   = "https://github.com/skilledwolf/cpp_hf/issues"

[tool.scikit-build]
wheel.packages = ["src/cpp_hf"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
fallback_version = "0.0"

[tool.scikit-build.cmake.define]
HF_USE_OPENMP = true
HF_USE_FFTW_THREADS = true
CMAKE_OSX_DEPLOYMENT_TARGET = { env = "MACOSX_DEPLOYMENT_TARGET", default = "11.0" }

[tool.pytest.ini_options]
testpaths = ["tests"]
