[build-system]
requires = [
    "scikit-build-core>=0.9",
    "pybind11>=2.11",
    "numpy",
    "setuptools_scm[toml]>=8",
]
build-backend = "scikit_build_core.build"

[project]
name = "cpp_hf"
dynamic = ["version"]
description = "Hartree-Fock solvers on 2D k-meshes — C++ reimplementation of jax_hf"
readme = "Readme.md"
requires-python = ">=3.10"
authors = [{ name = "Tobias Wolf", email = "public@wolft.xyz" }]
license = { file = "LICENSE" }
keywords = ["hartree-fock", "fftw", "eigen", "pybind11", "condensed-matter", "physics"]
dependencies = [
    "numpy",
    "scipy",
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/skilledwolf/cpp_hf"
Issues   = "https://github.com/skilledwolf/cpp_hf/issues"

[tool.scikit-build]
wheel.packages = ["src/cpp_hf"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
fallback_version = "0.0"

[tool.scikit-build.cmake.define]
HF_USE_OPENMP = true
HF_USE_FFTW_THREADS = true
CMAKE_OSX_DEPLOYMENT_TARGET = { env = "MACOSX_DEPLOYMENT_TARGET", default = "11.0" }

[tool.pytest.ini_options]
testpaths = ["tests"]

# ---------------------------------------------------------------------------
# cibuildwheel: cross-platform wheel provisioning.  Restored after fb81931
# ("reorganize native extension package") dropped this block — manylinux ships
# no FFTW, so before-all builds it from source into .cache/fftw-3.3.10-<arch>,
# the environment block points CMake's pkg-config finder at it, and repair
# bundles the shared lib into the wheel.  wheels.yml and ci/*.sh are unchanged
# from the last good release (v1.0.3).
# ---------------------------------------------------------------------------
[tool.cibuildwheel]
build = "cp311-* cp312-* cp313-*"
skip = "pp* *-musllinux_*"
# API-agnostic load test: confirms the native extension (FFTW/OpenMP linked)
# imports from the repaired wheel.  (The old ci/smoke_test.py used a since-
# renamed API.)
test-command = 'python -c "import cpp_hf"'

[tool.cibuildwheel.linux]
before-all = "bash ci/linux_before_all.sh"
manylinux-x86_64-image  = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
repair-wheel-command = """
LD_LIBRARY_PATH=/project/.cache/fftw-3.3.10-$(uname -m)/lib:$LD_LIBRARY_PATH \
  auditwheel repair -w {dest_dir} {wheel}
"""

[tool.cibuildwheel.macos]
archs = ["native"]
# One script handles both archs: arm64 builds FFTW from source, x86_64 uses brew.
before-all = "bash ci/macos_arm_fftw.sh"
repair-wheel-command = """
delocate-wheel -L cpp_hf/.dylibs --require-archs {delocate_archs} -w {dest_dir} -v {wheel}
"""

# Teach CMake/pkg-config where the cached FFTW (and vendored Boost headers) live.
[tool.cibuildwheel.linux.environment]
PKG_CONFIG_PATH   = "/project/.cache/fftw-3.3.10-x86_64/lib/pkgconfig:/project/.cache/fftw-3.3.10-aarch64/lib/pkgconfig:$PKG_CONFIG_PATH"
CMAKE_PREFIX_PATH = "/project/.cache/fftw-3.3.10-x86_64:/project/.cache/fftw-3.3.10-aarch64:$CMAKE_PREFIX_PATH"
LIBRARY_PATH      = "/project/.cache/fftw-3.3.10-x86_64/lib:/project/.cache/fftw-3.3.10-aarch64/lib:$LIBRARY_PATH"
CPATH             = "/project/.cache/fftw-3.3.10-x86_64/include:/project/.cache/fftw-3.3.10-aarch64/include:$CPATH"
BOOST_INCLUDEDIR  = "/project/.cache/boost-1.89.0/include"
